# CustoSQL

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: architecture.md
docs/Domain/: PrimitiveTypes.md
src/Domain/Helpers/: ByteNumberHelper.hpp  ByteNumbersHelper.cpp  CMakeLists.txt
src/Domain/PrimitiveTypes/: CMakeLists.txt  Primitive.cpp  PrimitiveTypes.hpp  SqlInt.cpp  SqlPrimitive.cpp
